--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "release": "standard-version",
     "deploy:mainnet": "yarn prepare:mainnet && yarn build:mainnet && yarn thegraph:deploy:mainnet",
     "lint:check": "prettier --check './**'",
-    "lint:fix": "sort-package-json && prettier --write './**'",
+    "lint:fix": "sort-package-json && prettier --write ./**",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable"
